--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Holograms: The Future of Imaging</title>
+    <title>Gallery - Holograms Site</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -11,19 +11,39 @@
         <h1>Holograms: Illuminating the Invisible</h1>
         <nav>
             <ul>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="what-is.html">What is a Hologram?</a></li>
                 <li><a href="history.html">History</a></li>
                 <li><a href="applications.html">Applications</a></li>
+                <li><a href="future.html">Future</a></li>
+                <li><a href="resources.html">Resources</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
     
     <main>
-        <section id="intro">
-            <h2>Welcome to the World of Holograms</h2>
-            <p>Explore the fascinating realm of holography, from its scientific foundations to cutting-edge applications. Use the navigation above to dive deeper into specific topics.</p>
-            <p>Holograms are not just sci-fi—they're revolutionizing technology today!</p>
+        <section id="gallery">
+            <h2>Hologram Gallery</h2>
+            <p>Explore stunning examples of holograms in action. Hover over images for details!</p>
+            <div class="gallery-grid">
+                <figure>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5a/Hologram_example.jpg/300px-Hologram_example.jpg" alt="Basic Hologram">
+                    <figcaption>A simple laser-generated hologram capturing light interference.</figcaption>
+                </figure>
+                <figure>
+                    <img src="https://images.unsplash.com/photo-1518709268805-4e9042af2176?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="AR Hologram">
+                    <figcaption>Augmented reality hologram in a smartphone app.</figcaption>
+                </figure>
+                <figure>
+                    <img src="https://images.unsplash.com/photo-1557804506-669a67965ba0?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Medical Hologram">
+                    <figcaption>3D holographic model used in medical imaging.</figcaption>
+                </figure>
+                <figure>
+                    <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Entertainment Hologram">
+                    <figcaption>Holographic projection in a live concert.</figcaption>
+                </figure>
+            </div>
         </section>
     </main>
     
