--- a/applications.html
+++ b/applications.html
@@ -14,7 +14,10 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="what-is.html">What is a Hologram?</a></li>
                 <li><a href="history.html">History</a></li>
-              
+              <li><a href="resource.html">resource</a></li>
+                <li><a href="gallery.html">gallery</a></li>
+                <li><a href="future.html">future</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
