--- a/future.html
+++ b/future.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Future of Holograms - Holograms Site</title>
-    <link rel="stylesheet" href="js/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
@@ -18,6 +18,7 @@
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="resources.html">Resources</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="future.html">future</a></li>
             </ul>
         </nav>
     </header>
