--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="history.html">History</a></li>
                 <li><a href="applications.html">Applications</a></li>
                 <li><a href="future.html">Future</a></li>
-                <li><a href="resources.html">Resources</a></li>
+                <li><a href="resource.html">Resource</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
