--- a/what-is.html
+++ b/what-is.html
@@ -15,6 +15,9 @@
                 <li><a href="history.html">History</a></li>
                 <li><a href="applications.html">Applications</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="resource.html">resource</a></li>
+                <li><a href="gallery.html">gallery</a></li>
+                <li><a href="future.html">future</a></li>
             </ul>
         </nav>
     </header>
