--- a/contact.html
+++ b/contact.html
@@ -29,14 +29,14 @@
             <p>Have questions about holograms? Reach out!</p>
             <form action="#" method="post">
                 <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required><br><br>
+                <input type="text" id="name" name="name" hologram><br><br>
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required><br><br>
+                <input type="email" id="email" name="email" lmvaarush67@gmail.com><br><br>
                 <label for="message">Message:</label><br>
-                <textarea id="message" name="message" rows="4" required></textarea><br><br>
-                <button type="submit">Send Message</button>
+                <textarea id="message" name="message" rows="4" thankyou for visiting our group></textarea><br><br>
+                <button type="submit">bye</button>
             </form>
-            <p>Email: info@hologramsite.com | Phone: (123) 456-7890</p>
+            <p>Email: lmvaarush67@gmail.com | Phone: (123) 456-7890</p>
         </section>
     </main>
     
